k8s/deploy.yaml
#apiVersion: apps/v1beta2
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bluegreen-0.0.2
  labels:
    app: bluegreen
    version: 0.0.2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bluegreen
      version: 0.0.2
  template:
    metadata:
      labels:
        app: bluegreen
        version: 0.0.2
    spec:
      containers:
      - name: bluegreen
        image: yoon5/bluegreen:0.0.2
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
  strategy:
    type: RollingUpdate
