k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-service
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: bluegreen
    version: 0.0.2
  type: NodePort
