k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bluegreen-ingress
spec:
  rules:
  - host: app4retrot.ddns.net
    http:
      paths:
      - background:
          serviceName: bluegreen-service
          servicePort: 8080
